SERVER-27940: fix deadlock in ReplicaSetMonitorManager on shutdown